<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Swerve</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_swerve_tabbed">SwerveTabbedActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login Activity strings -->
    <string name="userNameHint">User Name</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Create Account</string>
    <string name="forgotPWtext">Forgot Password</string>

    <!-- Tabbed Activity Strings -->
    <string name="feedButtonText">Feed</string>
    <string name="postButtonText">Post</string>
    <string name="mySwerveButtonText">Mine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Feed fragment strings -->
    <string name="group_button_text">Groups</string>
    <string name="friends_button_text">Friends</string>
    <string name="location_button_text">Location (City, State)</string>
    <string name="public_button_text">Public</string>

    <!-- CameraFragment strings -->
    <string name="commentPrompt">What Happened?!</string>
    <string name="title_activity_friends_view">FriendsViewActivity</string>
    <string name="title_activity_groups_view">GroupsViewActivity</string>
    <string name="title_activity_post">Swerve Post</string>

    <!-- ActionBar strings -->
    <string name="logoutText">Logout</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Search</string>
    <string name="title_section2">Public</string>
    <string name="title_section3">Friends List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Name or Location</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- registration strings -->
    <string name="email_text_field">Email Address</string>
    <string name="male_gender_text">Male</string>
    <string name="female_gender_text">Female</string>
    <string name="hometown_text">Home Town</string>
    <string name="sec_question_text">Security Question</string>
    <string name="sec_answer_text">Security Question Answer</string>
    <string name="password_text">Password</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="confirm_account">Confirm</string>
    <string name="terms_string">Terms and Conditions</string>

    <string name="hometown_help">**Home Town: The default location for your posts</string>
    <string name="email_help">**Email: Please enter a valid email address ending in com or net after the period (this will be used to validate your account)</string>
    <string name="sec_question_help">**Security Question: Enter something that will be memorable a long time from now.</string>
    <string name="username_help">**User Name: We suggest not using your real name, but keep it clean or we\'ll have to take not so drastic measures!</string>
    <string name="password_help">**Password: This should contain a capitol letter, a number, and be at least 8 characters long.</string>
    <string name="gender_help">Gender: This is not required but will result in happier times for those not wishing to view the secrets of the opposite sex.</string>
    <string name="required_help">** = Required Field</string>

    <!-- Comment activity strings -->
    <string name="comment_hint">Thoughts?</string>
    <string name="submit_comment_string">✔</string>

    <!-- Post Activity Strings -->
    <string name="post_pic_text">Normal</string>
    <string name="post_text_only">Text Only</string>
    <string name="activate_comments_string">Allow Comments</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

</resources>
