<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngdesigns.swerve.RegInfoDialogFragment"
    style="@style/mainAppTheme" android:background="@drawable/text_backing">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/password_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/email_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_help"
                style="@style/dialog_text"
                android:textColor="#000000"
            />

            <TextView
                android:id="@+id/securityquestion_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec_question_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/homwtown_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hometown_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/gender_help_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />

            <TextView
                android:id="@+id/required_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/required_help"
                style="@style/dialog_text"
                android:textColor="#000000"
                />




            </LinearLayout>


        </ScrollView>

</FrameLayout>
