<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngdesigns.swerve.RegisterActivity"
    android:orientation="vertical" style="@style/altAppTheme" android:gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:padding="5dp"
        android:layout_weight="90">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingTop="15dp">


                <EditText
                    android:id="@+id/registerUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/userNameHint"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/registerConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/confirm_pw"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/email_text_field"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>


                <EditText
                    android:id="@+id/registerQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/sec_question_text"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/registerAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/sec_answer_text"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/registerHometown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textWidgetTheme"
                    android:hint="@string/hometown_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        style="@style/textWidgetTheme"
                        android:padding="5dp"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/male_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male_gender_text"/>

                        <RadioButton
                            android:id="@+id/female_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female_gender_text"/>


                        </RadioGroup>


                    </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:padding="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/account_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/accountButtonTheme"
                android:text="@string/confirm_account"
                android:layout_gravity="left"
                android:layout_weight="20"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"/>

            <ImageView
                android:id="@+id/info_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_launcher"
                android:layout_weight="10"/>

            </LinearLayout>


    </LinearLayout>

</LinearLayout>
