<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    style="@style/altAppTheme"
    tools:context="com.youngdesigns.swerve.SwerveTabbedActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:weightSum="1.0">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/feed_button"
                android:text="@string/feedButtonText"
                style="@style/tabbedButtonTheme"
                android:layout_weight=".25"
                android:onClick="feedClicked"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/post_button"
                android:text="@string/postButtonText"
                style="@style/tabbedButtonTheme"
                android:layout_weight=".25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/my_swerves_button"
                android:text="@string/mySwerveButtonText"
                style="@style/tabbedButtonTheme"
                android:layout_weight=".25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/account_button"
                android:text="@string/accountButtonText"
                style="@style/tabbedButtonTheme"
                android:layout_weight=".25"/>

        </RadioGroup>




        </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_weight=".9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme"></FrameLayout>




</LinearLayout>
