<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    style="@style/altAppTheme"
    android:gravity="center"
    tools:context="com.youngdesigns.swerve.LoginActivity">



    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            style="@style/textWidgetTheme"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textSize="20sp"
            android:inputType="textPassword"
            style="@style/textWidgetTheme"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButtonText"
            android:onClick="loginClicked"
            style="@style/loginButtonTheme"
            android:layout_gravity="right"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/registerButton"
                android:text="@string/registerButtonText"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/forgotTextView"
                android:text="@string/forgotPWtext"
                android:layout_margin="10dp"/>

        </LinearLayout>

        </LinearLayout>

</ScrollView>

